Right-align finance values in yearly reports, fix minor mistakes in 2015 report

--- a/metabrainz/static/css/main.less
+++ b/metabrainz/static/css/main.less
@@ -382,3 +382,8 @@ h1.page-title, h2.page-title {
     margin-top: 20px;
   }
 }
+
+// Report-specific styles
+table.finances td:nth-child(2) {
+  text-align: right;
+}
